# Convertidor

./: .gitignore  README.md  pyproject.toml
converter/: __init__.py  books.py  cli.py  exporter.py  mapper.py  metadata.py  models.py  parser.py  rtf.py  utils.py  validator.py
docs/: architecture.md  decision-log.md  format-comparison.md
examples/: README.md  sample_mybible.sql
tests/: conftest.py  test_exporter.py  test_mapper.py  test_metadata.py  test_parser.py  test_validator.py
